[package]
name = "util"
version = "0.1.0"
edition = "2021"

[dependencies]
Inflector = "0.11.4"
clap = { version = "4.5.23", features = ["derive"] }
cmake-parser = "0.1.0-beta.1"
git2 = "0.19.0"
indoc = "2.0.5"
lazy_static = "1.5.0"
octocrab = "0.42.1"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
walkdir = "2.5.0"
